# Monoloth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  REVIEW_HANDOVER.txt  SECURITY.md  beta-vs-main-review.txt  bug-audit-sources.txt  gpt-5.5 report.txt  opus-4.8 report.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
.impeccable/: design.json
frontend/: app.js  app.renderer-policy.test.cjs  command-palette.js  command-palette.test.cjs  ctx-menu.js  dialog.js  dialog.test.cjs  dom-utils.test.cjs  file-picker.js  file-picker.test.cjs  index.html  plugin-updater.test.cjs  profiles.js  profiles.test.cjs  shortcuts.js  shortcuts.test.cjs  sidebar.js  sidebar.test.cjs  simplified-landing.js  style.css  tabs.js  tabs.test.cjs  tauri-bridge.js  tauri-bridge.test.cjs  terminal.js  terminal.test.cjs  theme.js  theme.test.cjs  tooltip.js  tooltip.test.cjs  updater-toast.test.cjs
frontend/fonts/: Bebas-Neue-400-normal.truetype  JetBrains-Mono-400-normal.truetype  JetBrains-Mono-500-normal.truetype  _fonts.css
frontend/lib/: dom-utils.js  plugin-process.js  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  history.rs  lib.rs  main.rs  pty.rs  tabs.rs
src-tauri/src/commands/: config.rs  fs.rs  history.rs  image.rs  mod.rs  profile.rs  shell.rs  terminal.rs  updater.rs  version.rs  window.rs
tmp/: task2-todos.md  task3-todo.md
(+259 files in other folders)
