[package]
name = "monoloth"
version = "2.2.4"
description = "Desktop launcher for TUI coding agents"
authors = ["Noahain"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "monoloth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"
portable-pty = { version = "0.8", features = ["serde"] }
rfd = "0.15"
dirs = "5"
image = "0.25"
parking_lot = "0.12"
shlex = "1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
base64 = "0.22"
shellexpand = "3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }
winreg = "0.55"
